Closed Bug 1326524 Opened 7 years ago Closed 7 years ago

dom/events/EventListenerManager.cpp:36:29: fatal error: ProfilerMarkers.h: No such file or directory (non-SPS)

Categories

(Toolkit :: Performance Monitoring, defect)

Unspecified
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- unaffected
firefox52 --- unaffected
firefox53 --- fixed

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

(Keywords: regression)

Attachments

(1 file)

On platforms without SPS profiler (e.g. BSDs, Solaris, Darwin/X11 and maybe iOS) some headers under tools/profiler/public/ aren't exported which leads to the following error.

In file included from objdir/dom/events/Unified_cpp_dom_events1.cpp:11:
dom/events/EventListenerManager.cpp:36:10: fatal error: 'ProfilerMarkers.h' file not
      found
#include "ProfilerMarkers.h"
         ^
1 error generated.
Comment on attachment 8822820 [details]
Bug 1326524 - Unbreak build without SPS profiler after bug 1324941.

This only uses MOZ_CRASH to avoid having to add extra #ifdef around curly brackets ending "else" branch. I have no clue which style is better.
Comment on attachment 8822820 [details]
Bug 1326524 - Unbreak build without SPS profiler after bug 1324941.

https://reviewboard.mozilla.org/r/101610/#review102110

Sorry about that.

I think you could also just leave out the #else branch. But it's up to you.
Attachment #8822820 - Flags: review?(mstange) → review+
Comment on attachment 8822820 [details]
Bug 1326524 - Unbreak build without SPS profiler after bug 1324941.

https://reviewboard.mozilla.org/r/101610/#review102110

Leaving #else code out would break statu quo from before bug 1324941.
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/da0b8224b791
Unbreak build without SPS profiler after bug 1324941. r=mstange
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/da0b8224b791
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Assignee: nobody → jbeich
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: