Bug 1326524 - Unbreak build without SPS profiler after bug 1324941. r=mstange

MozReview-Commit-ID: 2E4MlCLQ9lf